--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -49,6 +49,10 @@ button {
     transition: all 0.3s ease-out;
 }
 
+.btn-small {
+    padding: 6px 10px;
+}
+
 .btn-medium {
     padding: 8px 20px;
     font-size: 16px;
