--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -16,6 +18,7 @@ html {
 
 body {
     font-family: 'PT Sans', sans-serif;
+    background-color: $bg-light-color;
 }
 
 button {
@@ -32,20 +35,16 @@ button {
 }
 
 .btn-primary {
-    border: 2px solid var(--primary);
-    border: 2px solid #fff;
     color: #242424;
-    background-color: var(--primary);
-    background-color: #fff;
+    background-color: $primary-color;
+    border: 2px solid $primary-color;
 }
 
 .btn-outline {
     padding: 8px 20px;
-    color: var(--primary);
-    color: #fff;
+    color: $primary-color;
     background-color: transparent;
-    border: 1px solid var(--primary);
-    border: 2px solid #fff;
+    border: 1px solid $primary-color;
     transition: all 0.3s ease-out;
 }
 
@@ -66,7 +65,7 @@ button {
 .btn-large:hover,
 .btn-medium:hover {
     transition: all 0.3s ease-out;
-    background: #fff;
-    color: #242424;
+    background: $primary-color;
+    color: $dark-color;
     transition: 250ms;
 }
