--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 nav {
     height: 2.5rem;
     display: flex;
@@ -24,11 +26,11 @@ nav {
         align-items: center;
         padding: 0.5rem 1rem;
         text-transform: uppercase;
-        color: #fff;
+        color: $primary-color;
 
         &:hover {
-            color: #f17828;
-            border-bottom: 5px solid #f17828;
+            color: $accent-color;
+            border-bottom: 5px solid $accent-color;
             transition: all 0.2s ease-out;
         }
     }
@@ -38,20 +40,20 @@ nav {
         align-items: center;
         gap: 0.1rem;
         text-decoration: none;
-        color: #fff;
+        color: $primary-color;
 
         .logo-icon {
-            color: #f17828;
+            color: $accent-color;
             padding-right: 0.3rem;
         }
     }
 
     .active-link {
-        color: #f17828;
+        color: $accent-color;
     }
 
     .icon {
-        color: #fff;
+        color: $primary-color;
     }
 }
 
