--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,6 +23,7 @@ body {
 
 button {
     padding: 0.5rem 1rem;
+    font-family: 'PT Sans', sans-serif;
     border-radius: 5px;
     outline: none;
     cursor: pointer;
@@ -32,6 +33,7 @@ button {
     border: none;
     border-radius: 5px;
     text-decoration: none;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .btn-primary {
