--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -72,7 +72,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin: 16px;
+        margin-top: 16px;
         text-align: left;
         box-sizing: border-box;
 
@@ -156,7 +156,23 @@
 // RESPONSIVE
 @media screen and (max-width: 820px) {
     .footer-links {
-        padding-top: 2rem;
+        width: 35vw;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 0.5rem;
+    }
+
+    .footer-links .footer-link-items {
+        margin-bottom: 1.5rem;
+    }
+
+    .footer-subscription form {
+        width: 85vw;
+
+        button {
+            width: auto;
+        }
     }
 
     .footer-input {
