--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -34,9 +34,13 @@ video {
 
     .hero-btns {
         margin-top: 32px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.7rem;
 
         .btn {
             margin: 0.5rem;
+            text-align: center;
         }
     }
 
@@ -51,6 +55,10 @@ video {
     .hero-container h1 {
         font-size: 2.8em;
         margin-top: -150px;
+    }
+
+    .hero-btns {
+        width: 15rem;
     }
 }
 
