--- a/src/style/membership.scss
+++ b/src/style/membership.scss
@@ -1,6 +1,7 @@
 @import './variables';
 
 .membership-container {
+    width: 100vw;
     margin: 3rem 0;
     display: flex;
     flex-direction: column;
@@ -23,14 +24,13 @@
     }
 
     .membership-boxes {
-        width: 100%;
         margin: 1rem 0rem;
         display: flex;
         justify-content: space-around;
         list-style: none;
 
         li {
-            width: 22rem;
+            width: 20rem;
             margin: 1rem;
             display: flex;
             flex-direction: column;
@@ -114,6 +114,13 @@
         justify-content: center;
         align-items: center;
     }
+
+    .membership-boxes {
+        li {
+            width: 18rem !important;
+        }
+    }
+
 }
 
 @media only screen and (max-width: 450px) {
