--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -70,15 +70,19 @@ nav {
 @media screen and (max-width: 960px) {
     .nav-menu.active {
         flex-direction: column;
-        justify-content: center !important;
+        justify-content: flex-start !important;
         align-items: center;
         width: 100%;
-        height: 50vh;
+        height: 98vh;
         position: absolute;
         top: 2.5rem;
         left: 0;
         opacity: 1;
         background-color: rgba(3, 3, 3, 0.8);
+
+        a {
+            margin-top: 1rem;
+        }
     }
 
     .nav-menu {
